ingress/devops-toolkit-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: devops-toolkit
    type: frontend
  name: devops-toolkit
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      service: devops-toolkit
      type: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: devops-toolkit
        type: frontend
    spec:
      containers:
      - image: vfarcic/devops-toolkit-series
        imagePullPolicy: Always
        name: frontend
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "100Mi"
            cpu: "50m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  labels:
    service: devops-toolkit
    type: ingress
  name: devops-toolkit
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32750
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: devops-toolkit
    type: frontend
  sessionAffinity: None
  type: NodePort
