ingress/go-demo-2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-2-db
  namespace: default
spec:
  selector:
    matchLabels:
      service: go-demo-2
      type: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: go-demo-2
        type: db
        vendor: MongoLabs
    spec:
      containers:
      - name: db
        image: mongo:4.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-2-db
  namespace: default
spec:
  selector:
    type: db
    service: go-demo-2
  ports:
  - port: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-2-api
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      type: api
      service: go-demo-2
  template:
    metadata:
      labels:
        type: api
        service: go-demo-2
        language: go
    spec:
      containers:
      - name: api
        image: vfarcic/go-demo-2
        readinessProbe:
          httpGet:
            path: "/demo/hello"
            port: 8080
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: "/demo/hello"
            port: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-2-api
  namespace: default
spec:
  selector:
    type: api
    service: go-demo-2
  ports:
  - port: 8080
