ingress/default-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  namespace: default
  labels:
    type: ingress
    service: devops-toolkit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: devops-toolkit
            port: 
              number: 80
