ingress/devops-toolkit-dom.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: devops-toolkit
    type: frontend
  name: devops-toolkit
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      service: devops-toolkit
      type: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: devops-toolkit
        type: frontend
    spec:
      containers:
      - image: vfarcic/devops-toolkit-series
        imagePullPolicy: Always
        name: frontend
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "100Mi"
            cpu: "50m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  namespace: default
  labels:
    type: ingress
    service: devops-toolkit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: devopstoolkitseries.com # All HTTP traffic from devopstoolkitseries.com hosts will be subject to this rule
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: devops-toolkit
            port: 
              number: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    service: devops-toolkit
    type: service
  name: devops-toolkit
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    type: frontend
    service: devops-toolkit
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
