ingress/go-demo-2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-demo-2
  namespace: default
  labels:
    type: ingress
    service: go-demo-2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
#   - host: "*.com" # All HTTP traffic from .com hosts will be subject to this rule
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /demo
        backend:
          service:
            name: go-demo-2-api
            port: 
              number: 8080
